--- a/components/navbar/Navbar.module.css
+++ b/components/navbar/Navbar.module.css
@@ -1,9 +1,10 @@
 .navbar {
   position: fixed;
-  background-color: var(--bg-primary);
+  background-color: var(--secondary-color);
   transition: width 200ms ease;
   font-size: 1.8rem;
   z-index: 1;
+  color: var(--tertirary-color);
 }
 
 .navbarNav {
