--- a/components/productThumbnail/Product.module.css
+++ b/components/productThumbnail/Product.module.css
@@ -3,7 +3,7 @@
   margin: 3rem 1rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   padding: 2rem;
-  height: 500px;
+  height: 420px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -21,6 +21,8 @@
 .title {
   font-weight: var(--regular);
   text-align: center;
+  font-size: 1.2rem;
+  margin: 1rem auto;
 }
 
 .rating {
