--- a/components/productDetails/productDetails.module.css
+++ b/components/productDetails/productDetails.module.css
@@ -73,6 +73,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-top: 1rem;
 }
 
 @media only screen and (max-width: 1000px) {
@@ -81,6 +82,7 @@
     flex-direction: column;
     text-align: center;
     margin-top: 5rem;
+    padding-bottom: 7rem;
   }
 
   .ratingAndPrice {
